--- a/MinorityReportWithWatch WatchKit App/Base.lproj/Interface.storyboard
+++ b/MinorityReportWithWatch WatchKit App/Base.lproj/Interface.storyboard
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6724" systemVersion="14A389" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8173.3" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8089"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="MinorityReportWithWatch_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <label alignment="left" text="Label" id="ttZ-TU-ZVO"/>
+                        <label alignment="left" text="Label" id="mGb-jT-mon"/>
+                        <label alignment="left" text="Label" id="eAp-g9-sCq"/>
+                        <label alignment="left" text="Label" id="ac7-IK-vTf"/>
+                    </items>
+                    <connections>
+                        <outlet property="statusLabel" destination="ac7-IK-vTf" id="f5i-gS-geI"/>
+                        <outlet property="xLabel" destination="ttZ-TU-ZVO" id="i42-vF-BYj"/>
+                        <outlet property="yLabel" destination="mGb-jT-mon" id="0JW-Ol-0md"/>
+                        <outlet property="zLabel" destination="eAp-g9-sCq" id="uXD-PY-3D5"/>
+                    </connections>
+                </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
         </scene>
@@ -31,7 +44,7 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="MinorityReportWithWatch_WatchKit_App" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
