--- a/MinorityReportWithWatch WatchKit App/Base.lproj/Interface.storyboard
+++ b/MinorityReportWithWatch WatchKit App/Base.lproj/Interface.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8173.3" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8092"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
@@ -10,12 +10,26 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="MinorityReportWithWatch_WatchKit_App" customModuleProvider="target">
                     <items>
+                        <button width="1" alignment="left" title="send test" id="sMe-S3-uG4">
+                            <connections>
+                                <action selector="sendDummyData" destination="AgC-eL-Hgc" id="mih-YN-sWc"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="start/stop" id="YjJ-ww-8Ru">
+                            <connections>
+                                <action selector="startStopButtonTapped" destination="AgC-eL-Hgc" id="rT6-vg-GFJ"/>
+                            </connections>
+                        </button>
                         <label alignment="left" text="Label" id="ttZ-TU-ZVO"/>
                         <label alignment="left" text="Label" id="mGb-jT-mon"/>
                         <label alignment="left" text="Label" id="eAp-g9-sCq"/>
-                        <label alignment="left" text="Label" id="ac7-IK-vTf"/>
+                        <label alignment="left" text="Label" id="ac7-IK-vTf">
+                            <color key="textColor" red="0.2827772556" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </label>
+                        <label alignment="left" text="reachable" id="6EP-y7-GlS"/>
                     </items>
                     <connections>
+                        <outlet property="reachableLabel" destination="6EP-y7-GlS" id="CVx-iA-bFf"/>
                         <outlet property="statusLabel" destination="ac7-IK-vTf" id="f5i-gS-geI"/>
                         <outlet property="xLabel" destination="ttZ-TU-ZVO" id="i42-vF-BYj"/>
                         <outlet property="yLabel" destination="mGb-jT-mon" id="0JW-Ol-0md"/>
