--- a/MinorityReportWithWatch/Base.lproj/LaunchScreen.storyboard
+++ b/MinorityReportWithWatch/Base.lproj/LaunchScreen.storyboard
@@ -17,8 +17,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="😈" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tfa-oo-hc7">
-                                <rect key="frame" x="280" y="276" width="40" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <rect key="frame" x="250" y="265" width="100" height="119.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -27,7 +27,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="tfa-oo-hc7" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="OZp-TW-ldb"/>
-                            <constraint firstItem="tfa-oo-hc7" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="uxp-3e-Uxe"/>
+                            <constraint firstItem="tfa-oo-hc7" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="245" id="l1O-av-UFz"/>
                         </constraints>
                     </view>
                 </viewController>
